feat(kafka-tools): stoped scrolling on scrolled terminal

--- a/apps/kafka-tools/src/app/features/producer/message/message.component.html
+++ b/apps/kafka-tools/src/app/features/producer/message/message.component.html
@@ -1,4 +1,4 @@
-<div class="time-stamp">{{ message.timeStamp | dfnsFormat: 'P' }}:</div>
+<div class="time-stamp">{{ message.timeStamp | dfnsFormat: 'pp' }}:</div>
 
 <div class="payload">
     {{ message.payload }}
