--- a/apps/kafka-tools/src/app/features/producer/producer.component.scss
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.scss
@@ -57,7 +57,7 @@
         margin: auto 0.5rem;
         width: max-content;
         font-weight: bolder;
-        color: var(--theme-warn);
+        color: var(--theme-success);
         font-variant: all-small-caps;
     }
 
