--- a/apps/kafka-tools/src/app/features/producer/message/message.component.scss
+++ b/apps/kafka-tools/src/app/features/producer/message/message.component.scss
@@ -1,14 +1,15 @@
 :host {
     display: flex;
-
     max-width: 100%;
 }
 
 .time-stamp {
     margin-right: 0.5rem;
     color: var(--theme-success);
+    width: max-content;
 }
 
 .payload {
     word-break: break-all;
+    flex: 1;
 }
