chore(kafka-tools): added a input placeholder

--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -8,6 +8,7 @@
     <div class="message-input">
         <input
             #input
+            placeholder="Kafka message"
             (keydown.enter)="sendMessage(topicNameInput.value, input.value)"
         />
         <button
