fix(kafka-tools): moved the scroll check above where the message is added to fix the auto scroll

--- a/apps/kafka-tools/src/app/features/producer/message/message.component.scss
+++ b/apps/kafka-tools/src/app/features/producer/message/message.component.scss
@@ -1,6 +1,10 @@
 :host {
     display: flex;
     max-width: 100%;
+
+    &:hover {
+        background: var(--theme-background-light-3);
+    }
 }
 
 .time-stamp {
