--- a/apps/kafka-tools/src/app/features/producer/producer.component.scss
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.scss
@@ -1,1 +1,67 @@
+:host {
+    display: flex;
+    flex-flow: column;
+}
 
+.terminal {
+    flex: 1;
+    overflow: hidden scroll;
+    padding: 0 1rem;
+}
+.footer {
+    display: flex;
+}
+
+.message-input,
+.topic-input {
+    height: 3.25em;
+    display: flex;
+    margin: 1rem;
+    border-radius: var(--border-radius) !important;
+    overflow: hidden;
+}
+
+.message-input {
+    flex: 1;
+    margin-right: 0.5rem;
+
+    &,
+    input,
+    button {
+        background: var(--theme-background-light-10);
+        color: var(--theme-text);
+        border: none;
+    }
+
+    input {
+        flex: 1;
+
+        padding-left: 1rem;
+    }
+
+    button {
+        background: var(--theme-background-light-20);
+    }
+}
+
+.topic-input {
+    margin-left: 0.5rem;
+    &,
+    input {
+        background: var(--theme-background-light-10);
+        color: var(--theme-text);
+        border: none;
+    }
+
+    .topic {
+        margin: auto 0.5rem;
+        width: max-content;
+        font-weight: bolder;
+        color: var(--theme-success);
+        font-variant: all-small-caps;
+    }
+
+    input {
+        width: 5rem;
+    }
+}
