--- a/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
+++ b/apps/kafka-tools/src/app/modules/window-controls/window-controls.component.scss
@@ -1,5 +1,3 @@
-@import '~/src/_styles/mixins/theme.mixin.scss';
-
 .container {
     width: 100%;
 }
@@ -37,7 +35,7 @@
     }
 }
 
-::ng-deep .close:hover {
+:host ::ng-deep .close:hover {
     transition: background 0.25s ease-out;
-    @include theme(background, warn);
+    background: var(--theme-warn);
 }
