chore(kafka-tools): added a toast component and toast-container component

--- a/apps/kafka-tools/src/app/app.component.html
+++ b/apps/kafka-tools/src/app/app.component.html
@@ -1,3 +1,4 @@
+<kafka-tools-toast-container></kafka-tools-toast-container>
 <div
     class="mat-app-background mat-typography content"
     [ngClass]="themes[currentThemeIndex] + '-theme'"
