--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -19,7 +19,7 @@
         </button>
     </div>
     <div class="topic-input">
-        <div class="topic">topic :</div>
+        <div class="topic" (click)="popToast()">topic :</div>
         <input
             #topicNameInput
             value="topic-test"
