--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -18,8 +18,8 @@
             send
         </button>
     </div>
-    <div class="topic-input">
-        <div class="topic" (click)="popToast()">topic :</div>
+    <div class="topic-input" (click)="popToast()">
+        <div class="topic">topic :</div>
         <input
             #topicNameInput
             value="topic-test"
