--- a/apps/kafka-tools/src/app/modules/toast/toast/toast.component.html
+++ b/apps/kafka-tools/src/app/modules/toast/toast/toast.component.html
@@ -1,1 +1,8 @@
-<p>toast works!</p>
+<div [ngClass]="options.level" class="kafka-tool-toast-component" mat-ripple>
+    <div class="title">
+        {{ options.title ?? options.level }}
+    </div>
+    <div class="body">
+        {{ options.content }}
+    </div>
+</div>
