chore(kafka-tools): updated the pop animation

--- a/apps/kafka-tools/src/shared/_styles/themes/dark/dark.pallette.scss
+++ b/apps/kafka-tools/src/shared/_styles/themes/dark/dark.pallette.scss
@@ -4,8 +4,8 @@ $dark-pallette: (
     warn: red,
     attention: #ff3c22,
     success: #00ff9d,
-    background: black,
-    // background: #0e0e0e,
+    // background: black,
+    background: #0e0e0e,
     text: white,
     shadow: black,
     colors: (
