--- a/apps/kafka-tools/src/app/modules/toast/toaster-container/toast-container.component.scss
+++ b/apps/kafka-tools/src/app/modules/toast/toaster-container/toast-container.component.scss
@@ -27,14 +27,14 @@
 kafka-tools-toast {
     position: absolute;
     transition: transform 250ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
-    animation: fade-in-toast 350ms;
+    animation: toast-pop-animation 200ms ease-out;
 }
 
-@keyframes fade-in-toast {
+@keyframes toast-pop-animation {
     0% {
-        opacity: 0;
+        clip-path: circle(25%);
     }
     100% {
-        opacity: 1;
+        clip-path: circle(75%);
     }
 }
