--- a/apps/kafka-tools/src/app/modules/toast/toast/toast.component.scss
+++ b/apps/kafka-tools/src/app/modules/toast/toast/toast.component.scss
@@ -37,15 +37,13 @@
 
     &:hover {
         transform: scale(1.1);
-        transition: transform 150ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+        transition: transform 200ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
     }
 }
 
 .title {
-    width: 7.5rem;
-    margin-left: 1rem;
-    margin-right: 0.75rem;
-
+    min-width: 5rem;
+    margin: 0 1rem;
     font-size: 1.25rem;
     font-weight: bolder;
     font-variant: all-small-caps;
