fix: fixed the bild

--- a/apps/kafka-tools/src/app/features/producer/producer.component.html
+++ b/apps/kafka-tools/src/app/features/producer/producer.component.html
@@ -6,7 +6,7 @@
 
 <div class="footer">
     <kafka-tools-consumer [topic]="this.currentTopic"></kafka-tools-consumer>
-    <div class="topic-input" (click)="popToast()">
+    <div class="topic-input">
         <div class="topic">topic :</div>
         <input
             #topicNameInput
