--- a/apps/kafka-tools/src/app/app.component.scss
+++ b/apps/kafka-tools/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import '~/src/_styles/theme.scss';
+@import '~/src/shared/_styles/theme.scss';
 
 :host .content {
     height: 100%;
@@ -6,7 +6,7 @@
     display: flex;
     flex-flow: column;
 
-    & > ::ng-deep :nth-child(3) {
+    & > ::ng-deep :nth-child(4) {
         height: 100%;
         max-height: 100%;
         overflow: auto;
