--- a/apps/kafka-tools/src/shared/_styles/theme.scss
+++ b/apps/kafka-tools/src/shared/_styles/theme.scss
@@ -8,10 +8,10 @@
 @use 'sass:map';
 @use 'sass:list';
 
-@import '~/src/_styles/font-config.scss';
-@import '~/src/_styles/functions/create-theme-vars.function.scss';
+@import '~/src/shared/_styles/font-config.scss';
+@import '~/src/shared/_styles/functions/create-theme-vars.function.scss';
 
-@import '~/src/_styles/themes';
+@import '~/src/shared/_styles/themes';
 
 .show-if-dark,
 .show-if-light {
@@ -45,18 +45,19 @@
 
 // Specific component overrides, pieces that are not in line with the general theming
 // Handle buttons appropriately, with respect to line-height
-.mat-raised-button,
-.mat-stroked-button,
-.mat-flat-button {
-    padding: 0 1.15em;
-    margin: 0 0.65em;
-    min-width: 3em;
-    line-height: 36.4px;
+::ng-deep {
+    button {
+        padding: 0 1.15em;
+        margin: 0 0.65em;
+        min-width: 3em;
+        font-size: 1.2rem !important;
 
-    text-transform: uppercase;
-}
+        text-transform: uppercase;
+        font-variant: all-small-caps !important;
+    }
 
-.mat-standard-chip {
-    padding: 0.5em 0.85em;
-    min-height: 2.5em;
+    .mat-standard-chip {
+        padding: 0.5em 0.85em;
+        min-height: 2.5em;
+    }
 }
